--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="/iCoderBootstrap">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="/iCoderBootstrap/">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/iCoderBootstrap/iCoderBootstrap/about.html">About</a>
+                    <a class="nav-link" href="/iCoderBootstrap/about.html">About</a>
 
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -46,7 +46,7 @@
 
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="iCoderBootstrap/iCoderBootstrap/contact.html">Contact Us</a>
+                    <a class="nav-link" href="iCoderBootstrap/contact.html">Contact Us</a>
                 </li>
 
             </ul>
