--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <a class="nav-link" href="/iCoderBootstrap/">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/iCoderBootstrap/about.html">About</a>
+                    <a class="nav-link" href="/about.html">About</a>
 
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -46,7 +46,7 @@
 
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="iCoderBootstrap/contact.html">Contact Us</a>
+                    <a class="nav-link" href="/contact.html">Contact Us</a>
                 </li>
 
             </ul>
